# advent-of-code

./: pyproject.toml
app/src/aoc2024/: answers.txt
app/src/aoc2024/d1/: problem-statement.txt  solution.py
app/src/aoc2024/d2/: problem-statement.txt  solution.py
app/src/aoc2024/d3/: problem-statement.txt  solution.py
app/test/aoc2024/: test_2024d1_solution.py  test_2024d2_solution.py  test_2024d3_solution.py
