[tool.poetry]
name = "advent-of-code"
version = "1.0.0"
description = ""
authors = ["David Turk <david.turk@cfacorp.com>"]
readme = "README.md"
packages = [{ include = "src", from = "app" }]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
